--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,15 @@ Flask==3.1.1
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.2
+gunicorn==21.2.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+packaging==25.0
+psycopg2==2.9.10
+pyngrok==7.2.8
+python-dotenv==1.1.0
+PyYAML==6.0.2
 SQLAlchemy==2.0.41
 typing_extensions==4.13.2
 Werkzeug==3.1.3
-gunicorn==21.2.0
